@@ -69,6 +69,13 @@
 		Displays a block on each gallery page that shows users and guests actually online
 	</li>
 	<li>
+		<a name="plugin_bundled_link_target"></a><h3>Link Target (link_target)<a href="#plugin_bundled_link_target" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
+		Changes the way external links are being opened: when this plugin is enabled, all links that contain the attribute rel="external" will open in a new window (instead of the same window). This has the same effect as the use of the target="_blank" attribute, but it will not render your HTML output invalid.<br />
+		This plugin has an impact mostly on the "Powered by Coppermine" link at the bottom of the gallery output. It is strongly recommended <strong>not</strong> to use the deprecated target attribute for links any longer, as suggested in the article <a href="http://www.sitepoint.com/article/standards-compliant-world/" rel="external" class="external">New-Window Links in a Standards-Compliant World</a> by Kevin Yank.<br />
+		The dev team recommends <strong>not</strong> to use this plugin: opening links in a new window means bossing around your site visitors. All of them are aware how to open a link in a new window or browser tab if they want to: you should respect their decision and leave the decision to them if they want to leave your page for good.<br />
+		We suggest to think twice before enabling this little plugin: you will lose visitors who don't like to be forced to open links in new windows, and you will confuse complete newbies.
+	</li>
+	<li>
 		<a name="plugin_bundled_opensearch"></a><h3>OpenSearch (opensearch)<a href="#plugin_bundled_opensearch" title="Link to this section"><img src="images/anchor.gif" width="15" height="9" border="0" alt="" /></a></h3>
 		An implementation of OpenSearch for Coppermine. When enabled, visitors can add the gallery to their browser's search bar.
 	</li>
