@@ -1,0 +1,10 @@
+<?php
+$name = $lang_plugin_php['link_target_name'];
+$description = $lang_plugin_php['link_target_description'];
+
+$author='Coppermine dev team';
+$version='1.0';
+
+$install_info = $extra_info = $lang_plugin_php['link_target_extra'] . '<br />' . $lang_plugin_php['link_target_recommendation'];
+
+?>
